--- a/FrontAngular/src/app/task/task.component.html
+++ b/FrontAngular/src/app/task/task.component.html
@@ -1,1 +1,52 @@
-<p>task works!</p>
+<mat-card>
+    <mat-form-field appearance="fill">
+        <mat-label>Description</mat-label>
+        <input matInput value="Disco party!" #message>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <mat-label>Action</mat-label>
+        <input matInput value="Dance" #action>
+    </mat-form-field>
+    <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+        <mat-icon>add</mat-icon>
+    </button>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+      <ng-container matColumnDef="done">
+        <th mat-header-cell *matHeaderCellDef> Done </th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-mini-fab color="primary" (click)="deleteTask(element.Id)">
+            <mat-icon>done</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+        <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef> Description </th>
+            <td mat-cell *matCellDef="let element"> {{element.Description}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="update">
+            <th mat-header-cell *matHeaderCellDef> Update </th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-mini-fab color="primary" (click)="deleteTask(element.Id)">
+                    <mat-icon>update</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef> Delete </th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-mini-fab color="primary" (click)="deleteTask(element.Id)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</mat-card>
