--- a/FrontAngular/src/app/app.component.html
+++ b/FrontAngular/src/app/app.component.html
@@ -1,3 +1,5 @@
+<script src="~/s Scripts/jquery-3.4.1.js"></script>
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <mat-toolbar color="primary">
   <section>
     <div class="example-label">{{title}}</div>
