--- a/FrontAngular/src/app/task/task.component.html
+++ b/FrontAngular/src/app/task/task.component.html
@@ -1,52 +1,59 @@
 <mat-card>
-    <mat-form-field appearance="fill">
-        <mat-label>Description</mat-label>
-        <input matInput value="Disco party!" #message>
-    </mat-form-field>
+  <input id="id" matInput hidden #id>
 
-    <mat-form-field appearance="fill">
-        <mat-label>Action</mat-label>
-        <input matInput value="Dance" #action>
-    </mat-form-field>
-    <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
-        <mat-icon>add</mat-icon>
-    </button>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <mat-form-field appearance="fill">
+    <mat-label>Description</mat-label>
+    <input matInput id="description" #description>
+  </mat-form-field>
 
-      <ng-container matColumnDef="done">
-        <th mat-header-cell *matHeaderCellDef> Done </th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-mini-fab color="primary" (click)="deleteTask(element.Id)">
-            <mat-icon>done</mat-icon>
-          </button>
-        </td>
-      </ng-container>
+  <mat-form-field appearance="fill">
+    <mat-label>Priority</mat-label>
+    <input matInput id="priority" #priority>
+  </mat-form-field>
+  <button mat-fab color="primary" (click)="save(+id.value, description.value, +priority.value)">
+    <mat-icon>add</mat-icon>
+  </button>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-        <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef> Description </th>
-            <td mat-cell *matCellDef="let element"> {{element.Description}} </td>
-        </ng-container>
+    <ng-container matColumnDef="done">
+      <th mat-header-cell *matHeaderCellDef> Done </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-mini-fab color="primary" (click)="deleteTask(element.Id)">
+          <mat-icon>done</mat-icon>
+        </button>
+      </td>
+    </ng-container>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="update">
-            <th mat-header-cell *matHeaderCellDef> Update </th>
-            <td mat-cell *matCellDef="let element">
-                <button mat-mini-fab color="primary" (click)="deleteTask(element.Id)">
-                    <mat-icon>update</mat-icon>
-                </button>
-            </td>
-        </ng-container>
+    <ng-container matColumnDef="priority">
+      <th mat-header-cell *matHeaderCellDef> Priority </th>
+      <td mat-cell *matCellDef="let element"> {{element.Priority.Description}} </td>
+    </ng-container>
 
-      <ng-container matColumnDef="delete">
-        <th mat-header-cell *matHeaderCellDef> Delete </th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-mini-fab color="primary" (click)="deleteTask(element.Id)">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </td>
-      </ng-container>
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef> Description </th>
+      <td mat-cell *matCellDef="let element"> {{element.Description}} </td>
+    </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+    <!-- Name Column -->
+    <ng-container matColumnDef="update">
+      <th mat-header-cell *matHeaderCellDef> Update </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-mini-fab color="primary" (click)="actionBtnUpdate(element)">
+          <mat-icon>update</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef> Delete </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-mini-fab color="primary" (click)="deleteTask(element.Id)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 </mat-card>
