--- a/FrontAngular/src/app/task/task.component.html
+++ b/FrontAngular/src/app/task/task.component.html
@@ -15,7 +15,7 @@
     </mat-select>
   </mat-form-field>
 
-  <button mat-mini-fab color="primary" (click)="save(+id.value, description.value, +priority.value)">
+  <button mat-mini-fab color="primary" (click)="save(+id.value, description.value, +priority.value, false)">
     <mat-icon>add</mat-icon>
   </button>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
@@ -23,7 +23,7 @@
     <ng-container matColumnDef="done">
       <th mat-header-cell *matHeaderCellDef> Done </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-mini-fab color="primary" (click)="deleteTask(element.Id)">
+        <button mat-mini-fab color="primary" disabled={{element.Completed}} (click)="completeTask(element)">
           <mat-icon>done</mat-icon>
         </button>
       </td>
@@ -43,7 +43,7 @@
     <ng-container matColumnDef="update">
       <th mat-header-cell *matHeaderCellDef> Update </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-mini-fab color="primary" (click)="actionBtnUpdate(element)">
+        <button mat-mini-fab color="primary" disabled={{element.Completed}} (click)="actionBtnUpdate(element)">
           <mat-icon>update</mat-icon>
         </button>
       </td>
@@ -52,7 +52,7 @@
     <ng-container matColumnDef="delete">
       <th mat-header-cell *matHeaderCellDef> Delete </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-mini-fab color="primary" (click)="deleteTask(element.Id)">
+        <button mat-mini-fab color="primary" disabled={{element.Completed}} (click)="deleteTask(element.Id)">
           <mat-icon>delete</mat-icon>
         </button>
       </td>
